refac: metodos auxiliares e docstrings